--- a/Assets/VideoPlayer Helper/package.json
+++ b/Assets/VideoPlayer Helper/package.json
@@ -2,7 +2,7 @@
   "name": "com.janniklassahn.unity-videoplayer-helper",
   "displayName": "Unity Video Player Helper",
   "description": "Simple helper for the Video Player in Unity",
-  "version": "0.1.103",
+  "version": "0.1.104",
   "unity": "2018.1",
   "license": null,
   "author": {
@@ -19,7 +19,7 @@
     {
       "displayName": "Examples",
       "description": "Examples",
-      "path": "Samples~/Example"
+      "path": "Samples~/Video Player Helper Examples"
     }  
   ]
 }
